--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "POGOProtos"]
 	path = POGOProtos
 	url = https://github.com/TheUnnamedOrganisation/POGOProtos.git
-	branch = master
+	branch = pogolib_integration
 [submodule "FeroxRev"]
 	path = FeroxRev
 	url = https://github.com/TheUnnamedOrganisation/FeroxRev.git
-	branch = master
+	branch = pogolib_integration
 [submodule "PoGo.NecroBot.Logic"]
 	path = PoGo.NecroBot.Logic
 	url = https://github.com/TheUnnamedOrganisation/PoGo.NecroBot.Logic.git
-	branch = master
+	branch = pogolib_integration
 [submodule "PokemonGO-Assets"]
 	path = RocketBot2/Resources/PokemonGO-Assets
 	url = https://github.com/Necrobot-Private/PokemonGO-Assets.git
